<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/grid"
    android:icon="@drawable/home"
    tools:ignore="MenuTitle" />

    <item android:id="@+id/menu3"
        android:icon="@drawable/menu"
        tools:ignore="MenuTitle" />


     <item android:id="@+id/add_order"
        tools:ignore="MenuTitle" />

    <item android:id="@+id/bell3"
        android:icon="@drawable/bell"
        tools:ignore="MenuTitle" />

    <item android:id="@+id/profile3"
        android:icon="@drawable/profile"
        tools:ignore="MenuTitle" />



</menu>