...
            app:navGraph="@navigation/bottom_nav_graph"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/bottomnav"
            tools:ignore="MissingConstraints" />



        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomnav"
...
